--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.4.1",
+    "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
     "express": "^5.0.1",
     "mammoth": "^1.9.0",
