--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "next": "15.1.7",
     "react": "^19.0.0",
@@ -18,6 +19,7 @@
     "react-toastify": "^11.0.3"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
